--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "chalk": "^4.1.0",
-    "griefergames-data": "file:../node-griefergames-data",
     "mineflayer": "github:KadaverBrutalo10/mineflayer",
+    "mineflayer-extra-patterns": "file:../mineflayer-extra-patterns",
+    "mineflayer-griefergames-data": "file:../mineflayer-griefergames-data",
     "mineflayer-pathfinder": "^2.4.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
