use official mineflayer dependency

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "chalk": "^4.1.0",
-    "mineflayer": "github:kaduvert/mineflayer",
+    "mineflayer": "^4.14.0",
     "mineflayer-extra-patterns": "git+https://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:x-oauth-basic@github.com/kaduvert/mineflayer-extra-patterns.git",
     "mineflayer-griefergames-data": "git+https://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:x-oauth-basic@github.com/kaduvert/mineflayer-griefergames-data.git",
     "mineflayer-pathfinder": "^2.4.4"
